# face_swap_streamer_version2

./: .coverage  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  OBS-setup.md  README.md  USERGUIDE.md  extract-ref.py  gpu-swap-stats-daemon.sh  gpu-swap-stats.sh  play-song.ps1  probe.py  pyproject.toml  reinstall.ps1  reinstall2.ps1  requirements-facefusion.txt  requirements-webapp.txt  run-dev.sh  setup.ps1  start-webapp.ps1  stream-swap.py  swap-album.ps1  swap-song.ps1  test-cuda-dlc.py  test-cuda.py  webapp.py  webapp_mp.py
baseline/: v0_metrics.json
cli/: CMakeLists.txt  README.md
cli/include/faceswap/: face_analyser.hpp  ffmpeg_io.hpp  inswapper.hpp  onnx_session.hpp  pipeline.hpp  reference.hpp  types.hpp
cli/scripts/: build.ps1  extract_emap.py  setup.ps1
cli/src/: face_analyser.cpp  ffmpeg_io.cpp  inswapper.cpp  main.cpp  onnx_session.cpp  pipeline.cpp  reference.cpp
configs/: draft.yaml  final_cinematic.yaml  quality.yaml
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  ENGINE.md  GPU_Implementation_Runbook.docx  HACKING.md  OBSERVABILITY.md  PERFORMANCE.md  RUNBOOK.md  TROUBLESHOOTING.md  perf-bench.md
docs/audit/: file_inventory.md  known_bugs.md  modules.md
docs/plans/: 2026-05-10-flask-gpu-saturation.md
installer/: README.txt  install.ps1  requirements-mp.txt  start.ps1
scripts/: calibrate_flicker_weights.py  compare_to_baseline.py  measure_baseline.py  smoke_gpu.py  vram_watch.py
server/: main.py  schemas.py  swap_worker.py  worker.py
src/face_swap/: __init__.py  __main__.py  _dll.py  baseline.py  blend.py  calibration.py  checkpoint.py  cli.py  config.py  difficulty.py  errors.py  face_detector.py  flicker.py  frame_store.py  gpu_telemetry.py  identity_manager.py  logging_setup.py  manifest.py  matching.py  metrics.py  observability.py  pipeline.py  quality_validator.py  reference_extractor.py  reference_preproc.py  renderer.py  report_generator.py  restoration_engine.py  runner.py  swap_engine.py  temporal_stabilizer.py  tracker.py  types.py  video_manager.py
src/face_swap/stabilizer/: __init__.py  flow.py  one_euro.py
tests/: conftest.py  test_imports.py
tests/fixtures/: test_set_manifest.yaml
tests/integration/: test_frame_roundtrip.py  test_resume.py
tests/unit/: test_blend.py  test_calibration.py  test_checkpoint.py  test_cli.py  test_config.py  test_difficulty_and_preproc.py  test_flicker.py  test_frame_store_and_flow.py  test_gpu_telemetry.py  test_identity_assignment.py  test_manifest_and_baseline.py  test_matching.py  test_metrics.py  test_observability.py  test_one_euro.py  test_pipeline_run.py  test_pipeline_scaffold.py  test_quality_validator.py  test_reference_extractor.py  test_renderer.py  test_report_generator.py  test_restoration_and_stabilizer.py  test_tracker.py  test_types.py  test_video_manager.py
tools/: build-installer.ps1
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/batches/[id]/: page.tsx
web/app/jobs/[id]/: page.tsx
web/components/: DropZone.tsx  HlsPlayer.tsx
web/lib/: api.ts
