[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "face_swap"
version = "1.0.0"
description = "AI Cinematic Face Swap Stabilization Engine (Phase 1)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Innoclique" }]

# Runtime deps. Heavy GPU deps (torch, insightface, onnxruntime-gpu) are
# declared but the package imports without them — every GPU-touching module
# imports them lazily so unit tests and CPU tooling work on a bare host.
dependencies = [
  "numpy>=1.26,<3",
  "opencv-python-headless>=4.10",
  "scikit-image>=0.24",
  "scipy>=1.13",
  "pyyaml>=6",
  "pydantic>=2.7",
  "rich>=13",
  "click>=8.1",
  "tqdm>=4.66",
  "structlog>=24",
]

[project.optional-dependencies]
# GPU / model runtime — installed on the RTX 5080 target machine (see README, §19).
gpu = [
  "torch>=2.7,<3",
  "torchvision>=0.22,<1",
  "insightface>=0.7",
  "onnxruntime-gpu>=1.18",
  "ffmpeg-python>=0.2",
  "pynvml>=11.5",
]
restoration = ["gfpgan>=1.4", "basicsr>=1.4"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10", "pre-commit>=3.7"]

[project.scripts]
face_swap = "face_swap.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/face_swap"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: requires ffmpeg / small clips (deselect with -m 'not integration')",
  "e2e: full pipeline on a short clip (nightly)",
  "gpu: requires a CUDA GPU and model weights",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
files = ["src/face_swap"]
